...
            if hostModel.viewModel.showAudioControls {
                HStack(spacing: 8) {
                    Text("Audio Playback")
                    Button {
                        hostModel.isPlaying ? hostModel.stopPlaying() : hostModel.startPlaying()
                    } label: {
                        Text(hostModel.isPlaying ? "Stop" : "Play")
                    }
                }
                .padding(.vertical, 4)
            }
            if hostModel.viewModel.showMIDIContols {
                Text("MIDI Input: Enabled")
...
